--- a/Mynetwork.html
+++ b/Mynetwork.html
@@ -112,7 +112,7 @@
                         </div>
                     </div>
                     <p class="refuse">Ignore</p>
-                    <p class="agree">Accept</p>
+                    <p class="agree" value = "Click me" onclick = "fun();">Accept</p>
                 </div>
                 <div class="invitations">
                     <div class="invi_photo_name_info">
@@ -126,7 +126,7 @@
                         </div>
                     </div>
                     <p class="refuse">Ignore</p>
-                    <p class="agree">Accept</p>
+                    <p class="agree" value = "Click me" onclick = "fun();">Accept</p>
                 </div>
                 <div class="invitations">
                     <div class="invi_photo_name_info">
@@ -140,7 +140,7 @@
                         </div>
                     </div>
                     <p class="refuse">Ignore</p>
-                    <p class="agree">Accept</p>
+                    <p class="agree" value = "Click me" onclick = "fun();">Accept</p>
                 </div>
 
                 <div class="reseau_page_container">
@@ -156,7 +156,7 @@
                             </div>
                             <p><a href="#">NTT Service</a></p>
                             <p>226 subscribers</p>
-                            <p>Follow</p>
+                            <p value = "Click me" onclick = "fun1();">Follow</p>
                         </div>
                         <div class="contact_page_profil">
                             <div class="backg_reseau_profil">
@@ -168,7 +168,7 @@
                             </div>
                             <p><a href="#">Amazon India</a></p>
                             <p>1426 Subscribers</p>
-                            <p>Follow</p>
+                            <p value = "Click me" onclick = "fun1();">Follow</p>
                         </div>
                         <div class="contact_page_profil">
                             <div class="backg_reseau_profil">
@@ -180,7 +180,7 @@
                             </div>
                             <p><a href="#">Haryana Roadways</a></p>
                             <p>33226 Subscribers</p>
-                            <p>Follow</p>
+                            <p value = "Click me" onclick = "fun1();">Follow</p>
                         </div>
                         <div class="contact_page_profil">
                             <div class="backg_reseau_profil">
@@ -192,7 +192,7 @@
                             </div>
                             <p><a href="#">American Tourister</a></p>
                             <p>99226 Subscribers</p>
-                            <p>Follow</p>
+                            <p value = "Click me" onclick = "fun1();">Follow</p>
                         </div>
                     </div>
                  
